<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mobileapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_Cart"
        android:name="com.example.mobileapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.mobileapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.mobileapp.ui.tools.ToolsFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mobileapp.ui.share.ShareFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.mobileapp.ui.send.SendFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_send" />
</navigation>